# audiotwin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: results.json  results.md  run_benchmark.py
docs/: index.html
src/audiotwin/: __init__.py  audio.py  cli.py  core.py  cover.py  landmark.py  neural.py  scores.py
tests/: conftest.py  test_classify_relation.py  test_combine_scores.py  test_cover.py  test_detect_relation.py  test_edit_classification.py  test_fingerprint.py  test_hash.py  test_instrumental.py  test_landmark.py  test_neural.py  test_scores.py  test_suggest_relation.py
