[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiotwin"
version = "0.7.0"
description = "Lightweight toolkit for detecting relations between audio files: duplicate, remaster, edit, sample, mashup, cover, instrumental."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "William Tchang", email = "william.tchang.pro@gmail.com" }]
keywords = ["audio", "fingerprint", "chromaprint", "acoustid", "duplicate", "deduplication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.23",
    "soundfile>=0.12",
]

[project.optional-dependencies]
landmark = [
    "scipy>=1.10",
]
cover = [
    "librosa>=0.10",
]
neural = [
    # Deliberately NOT included in [all]: PyTorch is a ~2 GB install.
    # Also requires the 'sampleid' package (MIT, not on PyPI):
    #   pip install -e "git+https://github.com/sony/sampleid.git#egg=sampleid"
    "torch>=2.0",
]
all = [
    "scipy>=1.10",
    "librosa>=0.10",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ZeWills987/audiotwin"
Repository = "https://github.com/ZeWills987/audiotwin"

[project.scripts]
audiotwin = "audiotwin.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audiotwin"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: performance tests (deselect with '-m \"not slow\"')",
]
